# vaani-alt

./: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml  requirements.txt  setup.py
vaani_alt/: agent.py
vaani_alt/utils/: nodes.py  state.py  tools.py
