[tool.poetry]
name = "vaani-alt"
version = "0.1.0"
description = ""
authors = ["Ashutosh <ashutosh@cognio.so>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.19"
langchain-community = "^0.3.18"
langchain-core = "^0.3.39"
langchain-groq = "^0.2.4"
langchain-google-genai = "^2.0.10"
langgraph = "^0.2.74"
pydantic = "^2.10.6"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
websockets = "^15.0"
python-dotenv = "^1.0.1"
qdrant-client = "^1.13.2"
sentence-transformers = "^3.4.1"
huggingface-hub = "^0.29.1"
replicate = "^1.0.4"
tavily-python = "^0.5.1"
sqlalchemy = "^2.0.38"
numpy = "^2.2.3"
pandas = "^2.2.3"
tenacity = "^9.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaani-alt"
version = "0.1.0"
